// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card basic usage renders correctly 1`] = `
.emotion-0 {
  margin: 1em;
  background-color: rgba(var(--starstuff-card-default-background-color),0.5);
  border-radius: 10px;
  box-shadow: 0.5em 0.5em 0.75em rgba(var(--starstuff-card-default-shadow-color),0.3);
  -webkit-transition: box-shadow 1s;
  transition: box-shadow 1s;
  --starstuff-card-default-background-color: 245,245,245;
  --starstuff-card-default-shadow-color: 10,10,10;
}

.emotion-0:active,
.emotion-0:focus,
.emotion-0:focus-within,
.emotion-0:hover {
  box-shadow: 0.8em 0.8em 1em rgba(var(--starstuff-card-default-shadow-color),0.4);
}

@media screen and (prefers-color-scheme:dark) {
  .emotion-0 {
    --starstuff-card-default-background-color: 55,55,55;
  }
}

<div
  className="emotion-0"
>
  <h1>
    Test Card
  </h1>
  <p>
    This is an an example of the Card component.
  </p>
</div>
`;

exports[`Card with customized component renders correctly 1`] = `
.emotion-0 {
  margin: 1em;
  background-color: rgba(var(--starstuff-card-default-background-color),0.5);
  border-radius: 10px;
  box-shadow: 0.5em 0.5em 0.75em rgba(var(--starstuff-card-default-shadow-color),0.3);
  -webkit-transition: box-shadow 1s;
  transition: box-shadow 1s;
  --starstuff-card-default-background-color: 245,245,245;
  --starstuff-card-default-shadow-color: 10,10,10;
}

.emotion-0:active,
.emotion-0:focus,
.emotion-0:focus-within,
.emotion-0:hover {
  box-shadow: 0.8em 0.8em 1em rgba(var(--starstuff-card-default-shadow-color),0.4);
}

@media screen and (prefers-color-scheme:dark) {
  .emotion-0 {
    --starstuff-card-default-background-color: 55,55,55;
  }
}

<article
  className="emotion-0"
>
  <h1>
    I'm an article!
  </h1>
  <p>
    *Ralphie Wiggum impersonation*
  </p>
</article>
`;
